syntax = "proto3";

package auth;

option go_package = "github.com/yourorg/record-platform/proto/auth";

// Auth service for gRPC
service AuthService {
  // Authenticate user
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  // Register user
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Validate token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message AuthenticateRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
  string refresh_token = 2;
  User user = 3;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
  User user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string refresh_token = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string version = 2;
}

message User {
  string id = 1;
  string email = 2;
  string created_at = 3;
}

